--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.3.1",
@@ -62,6 +63,7 @@
     "resend": "^3.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -69,6 +71,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
