--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^6.13.8",
     "next": "15.3.3",
@@ -58,6 +59,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "resend": "^3.5.0",
