--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -63,6 +65,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "resend": "^3.5.0",
+    "speakeasy": "^2.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.8.0",
