--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^6.13.8",
-    "next": "^15.3.3",
+    "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.1",
@@ -77,6 +77,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
