--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "resend": "^3.5.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "speakeasy": "^2.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
